2011-08-29  Roland Grunberg  <rgrunber@redhat.com>

	* op_error_key: New file that maps some error key word to the corresponding key
		value of the externalized string representing that error.
	* src/org/eclipse/linuxtools/oprofile/core/OprofileCorePlugin.java
		(getPluginLocation): New method
	* src/org/eclipse/linuxtools/oprofile/core/linux/OpControlErrorHandler.java
		(handleError): New class to handle errors from running opcontrol
	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java
		(_runOpcontrol): Move error handling into OpcontrolErrorHandler.
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties:
		Externalize "Events must be distinct" error.

2011-07-20  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java (getEventNames): 
	(handleModelData): Fix for Eclipse bug 341621.
	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Refactored due to above fix. 
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties: Ditto.

2011-07-06  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Provide hints
	in error log if opcontrol errors are detected.
	* src/org/eclipse/linuxtools/oprofile/core/OprofileCorePlugin.java (log): Added logging methods.
	

2011-06-01  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Add print
	statements to show what's going on on stdout/stderr of the called process if debugging is turned on.
	This might be useful for tracing down weird bugs.

2011-05-31  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Do better
	error reporting, when user faces the nmi_watchdog problem.
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties: Ditto.
