@@ -76,9 +76,14 @@ public class InfoAdapter extends AbstractDataAdapter{
 	
 	public InfoAdapter (){
 		try {
-			Process p = Runtime.getRuntime().exec("ophelp -X");
-			InputStream is = p.getInputStream();
-			createDOM(is);
+			if (hasTimerSupport()){
+				// In timer mode, we have no relevant XML generated by ophelp
+				createDOM(null);
+			}else{
+				Process p = Runtime.getRuntime().exec("ophelp -X");
+				InputStream is = p.getInputStream();
+				createDOM(is);
+			}
 		} catch (IOException e) {
 		}
 	}
@@ -92,15 +97,22 @@ public class InfoAdapter extends AbstractDataAdapter{
 		}
 	}
 
+	/**
+	 * Set up the DOM for later manipulation
+	 * @param is the InpuStream resulting from running the ophelp command.
+	 * This will be passed in as null for timer mode.
+	 */
 	private void createDOM(InputStream is) {
 		DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
 		DocumentBuilder builder;
 		try {
 			builder = factory.newDocumentBuilder();
 			try {
-				Document oldDoc = builder.parse(is);
-				Element elem = (Element) oldDoc.getElementsByTagName(HELP_EVENTS).item(0);
-				oldRoot = elem;
+				if (is != null) {
+					Document oldDoc = builder.parse(is);
+					Element elem = (Element) oldDoc.getElementsByTagName(HELP_EVENTS).item(0);
+					oldRoot = elem;
+				}
 				
 				newDoc = builder.newDocument();
 				newRoot = newDoc.createElement(INFO);
@@ -122,7 +134,9 @@ public class InfoAdapter extends AbstractDataAdapter{
 			return;
 		}
 		createHeaders();
-		createXML();
+		if (!hasTimerSupport()){
+			createXML();
+		}
 	}
 
 	private void createHeaders() {
@@ -167,7 +181,7 @@ public class InfoAdapter extends AbstractDataAdapter{
 
 	/**
 	 * Determine whether the cpu supports timer mode
-	 * @return the string "true" if it is true, and "false" otherwise
+	 * @return true if it is true, and false otherwise
 	 */
 	private boolean hasTimerSupport() {
 		File file = new File(CPUTYPE);
